# ConsoleReader

./: .gitignore  CMakeLists.txt  README.md
include/: bookReader.h  interpretFile.h  login.h  menu.h  session.h
menus/: fav_temp  intro  main  search_temp
secret_data/: accounts  favorites
src/: bookReader.cpp  interpretFile.cpp  login.cpp  main.cpp  menu.cpp  session.cpp
